force-app/main/default/objects/ssot__Application__dlm/fields/ssot__AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>ssot__AmountPaid__c</fullName>
    <label>Amount Paid</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AmountPaid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>