force-app/main/default/objects/ssot__Application__dlm/fields/ssot__Application_AccountId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Application_AccountId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application_AccountId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Application_AccountId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>Application_AccountId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>