force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ApplicationCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationCategory__c</fullName>
    <label>Application Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>