force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ApplicationReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationReferenceNumber__c</fullName>
    <label>Application Reference Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationReferenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>