force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationStatus__c</fullName>
    <label>Application Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>