force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ApplicationSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationSummaryText__c</fullName>
    <label>Application Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>