force-app/main/default/objects/ssot__Application__dlm/fields/ssot__AppliedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppliedDateTime__c</fullName>
    <label>Applied Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppliedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>