force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ApprovedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApprovedDateTime__c</fullName>
    <label>Approved Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApprovedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>