force-app/main/default/objects/ssot__Application__dlm/fields/ssot__Approver__c.field-meta.xml
<CustomField>
    <fullName>ssot__Approver__c</fullName>
    <label>Approver</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Approver</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>