force-app/main/default/objects/ssot__Application__dlm/fields/ssot__BenefitApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitApplicationId__c</fullName>
    <label>Benefit Application</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitApplicationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>