force-app/main/default/objects/ssot__Application__dlm/fields/ssot__IsSubmittedByThirdParty__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSubmittedByThirdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted By Third Party</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSubmittedByThirdParty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>