force-app/main/default/objects/ssot__Application__dlm/fields/ssot__MatchScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MatchScoreNumber__c</fullName>
    <label>Match Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MatchScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>