force-app/main/default/objects/ssot__Application__dlm/fields/ssot__MatchScoreReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MatchScoreReasonText__c</fullName>
    <label>Match Score Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MatchScoreReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>