force-app/main/default/objects/ssot__Application__dlm/fields/ssot__ParentApplication__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentApplication__c</fullName>
    <label>Parent Application</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentApplication</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>