force-app/main/default/objects/ssot__Application__dlm/fields/ssot__PrimaryApplicantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryApplicantId__c</fullName>
    <label>Primary Applicant</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryApplicantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>