force-app/main/default/objects/ssot__Application__dlm/fields/ssot__RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__RejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RejectionReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>