force-app/main/default/objects/ssot__Application__dlm/fields/ssot__rel_1719817642102_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817642102_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application_SubmittedBy_map_Account__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Application_SubmittedBy_map_Account__rel</relationshipLabel>
    <relationshipName>rel_1719817642102_end</relationshipName>
    <type>Lookup</type>
</CustomField>