force-app/main/default/objects/ssot__Application__dlm/fields/ssot__rel_1719817764897_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817764897_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application_AccountContactId_map_Acc_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>Application_AccountContactId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1719817764897_end</relationshipName>
    <type>Lookup</type>
</CustomField>