force-app/main/default/objects/ssot__Application__dlm/fields/ssot__SavedApplicationReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SavedApplicationReferenceId__c</fullName>
    <label>Saved Application Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SavedApplicationReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>