force-app/main/default/objects/ssot__Application__dlm/fields/ssot__SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmittedBy__c</fullName>
    <label>Submitted By</label>
    <length>50</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmittedBy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>